--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,13 @@
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            "logging": {
+                "moduleLoad": false,
+                "exceptions": true,
+                "programOutput": true,
+                "engineLogging": false
+            }
         }
     ,]
 }
