Start of file implementation

--- a/NetRPG/NetRPG.csproj
+++ b/NetRPG/NetRPG.csproj
@@ -9,4 +9,8 @@
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
 </Project>
