--- a/NetRPG/NetRPG.csproj
+++ b/NetRPG/NetRPG.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Terminal.Gui" Version="0.24.0" />
   </ItemGroup>
 
 </Project>
