Subfile paging initial work

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/NetRPG/bin/Debug/netcoreapp3.1/NetRPG.dll",
-            "args": ["objects/dcl_file_exfmt10.rpgle"],
+            "args": ["objects/${fileBasename}"],
             "cwd": "${workspaceFolder}/NetRPG",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "externalTerminal",
