Set lower limit support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,13 +26,34 @@
         },
 
         {
-            "name": "Launch Display",
+            "name": "Launch Program",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/NetRPG/bin/Debug/netcoreapp3.1/NetRPG.dll",
             "args": ["objects/${fileBasename}"],
+            "cwd": "${workspaceFolder}/NetRPG",
+            // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
+            "console": "externalTerminal",
+            "stopAtEntry": false,
+            "internalConsoleOptions": "openOnSessionStart",
+            "logging": {
+                "moduleLoad": false,
+                "exceptions": true,
+                "programOutput": true,
+                "engineLogging": false
+            }
+        },
+
+        {
+            "name": "Launch Program with Debug",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/NetRPG/bin/Debug/netcoreapp3.1/NetRPG.dll",
+            "args": ["objects/${fileBasename}", "-d"],
             "cwd": "${workspaceFolder}/NetRPG",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "externalTerminal",
